[gd_scene load_steps=7 format=2]

[ext_resource path="res://Trash/Can.png" type="Texture" id=1]
[ext_resource path="res://Trash/Trash.gd" type="Script" id=2]
[ext_resource path="res://Trash/Trash.wav" type="AudioStream" id=3]
[ext_resource path="res://People/DuckToy.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.3125, 3.6875 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.8125, 6.4375 )

[node name="Trash" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.3125, 0.8125 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0625, -0.3125 )
shape = SubResource( 2 )

[node name="StopperHitSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="PersonHitSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
